--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 @charset "Shift_JIS";
 * {
   box-sizing: border-box;
+  font-family: "Noto Sans JP", "Quicksand";
+}
+
+ul {
+  padding-inline-start: 0px;
 }
 
 body {
   width: 98%;
   margin: auto;
-  font-family: "Quicksand"
 }
 
 p {
@@ -30,12 +34,9 @@ header {
 .header-logo {
   font-size: 25px;
   font-weight: bold;
-  font-family: "Noto Sans JP";
   float: left;
   padding: 15px 40px;
 }
-
-
 
 .header-list a {
   padding-right: 25px;
@@ -58,6 +59,7 @@ header {
 }
 
 main{
+  height: relative;
   margin: 10px 10px 100px;
 }
 
@@ -65,59 +67,58 @@ main img {
   width: 75%;
   display: block;
   margin: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .main-border{
   border-top: 2px solid #a9a9a9;
 }
 
-.contents-item {
-  margin: 40px 10% 20px;
+main ul{
+  display: inline-block;
+  margin: auto;
+  text-align: center;
+  width: 100%;
 }
 
-h1 a {
+h1 {
   color: #a9a9a9;
   font-size: 20px;
-  font-family: "Noto Sans JP";
   font-weight: normal;
-  padding-left: 0.5em;
   cursor: pointer;
 }
 
-h2 a {
+h2 {
   color: #a9a9a9;
   font-size: 18px;
-  font-family: "Noto Sans JP";
   font-weight: normal;
-  padding-left: 1em;
   cursor: pointer;
 }
 
 h1 p {
   color: black;
   font-size: 18px;
-  font-family: "Noto Sans JP";
   font-weight: normal;
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
-  padding-left: 1em;
-  padding-right: 1em;
 }
 
 h2 p {
   color: black;
   font-size: 18px;
-  font-family: "Noto Sans JP";
   font-weight: normal;
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
-  padding-left: 1em;
-  padding-right: 1em;
 }
 
 .button {
-  display: inline-block;
-  width: 15%;
+  display: block;
+  float: left;
+  text-align: center;
+  margin: 1%;
+  width: 30%;
+  height: 300px;
   padding: 0.5em 1em;
   text-decoration: none;
   background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
@@ -131,12 +132,14 @@ h2 p {
 }
 
 .button:hover{
-  -webkit-transform: rotate(5deg);
-  transform: rotate(5deg);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  background-image: linear-gradient(45deg, #709dffc2 0%, #91fdb7cc 100%);
 }
 
 footer {
   background-color: #2f5167;
+  height: 100px;
   color: white;
   margin-bottom: 8px;
 }
@@ -144,7 +147,6 @@ footer {
 .footer-logo {
   font-size: 25px;
   font-weight: bold;
-  font-family: "Noto Sans JP";
   float: left;
   padding: 8px 40px;
 }
@@ -179,8 +181,4 @@ footer {
   text-align: center;
   height: 22px;
   padding-bottom: 0.5em;
-}
-
-.copyright span {
-  font-family: "Noto Sans JP"
 }
