--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h2 p {
 }
 
 /*インスタ*/
-.btn-social-long-insta {
+.sns btn-social-long-insta {
   /*ボタンの下地*/
   color: #FFF;/*文字・アイコン色*/
   border-radius: 7px;/*角丸に*/
