--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
 }
 
 .header-list a {
-  margin-right: 25px;
+  margin-right: 30px;
   font-size: 20px;
   font-weight: normal;
   color: white;
@@ -86,29 +86,23 @@ main ul{
   width: 100%;
 }
 
-h1 a {
-  color: #a9a9a9;
-  font-size: 20px;
+h1 {
+  color: white;
+  font-size: 25px;
   font-weight: normal;
   cursor: pointer;
+  padding-bottom: 10px;
 }
 
 h2 {
-  color: #a9a9a9;
-  font-size: 18px;
-  font-weight: normal;
-  cursor: pointer;
-}
-
-h1 p {
   color: black;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: normal;
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
 }
 
-h2 p {
+h3 {
   color: black;
   font-size: 18px;
   font-weight: normal;
@@ -129,7 +123,7 @@ h2 p {
   border-left: solid 6px #0000ff;
   color: #ffffff;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 20px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
   transition: .4s;
   cursor: pointer;
