--- a/responsive.css
+++ b/responsive.css
@@ -45,6 +45,9 @@
     margin-top: 20px;
     margin-bottom: 20px;
   }
+  footer {
+    height: auto;
+  }
   .footer-list {
     display: none;
   }
