--- a/responsive.css
+++ b/responsive.css
@@ -35,7 +35,7 @@
 /*スマホ向け*/
 @media (max-width: 670px){
   .header-logo, .footer-logo {
-    display: inline-block;
+    display: block;
     float: none;
     text-align: center;
   }
