--- a/base.css
+++ b/base.css
@@ -44,6 +44,7 @@ header {
 .header-list a {
   margin: auto;
   margin-right: 30px;
+  margin-bottom: 30px;
   font-size: 20px;
   font-weight: normal;
   color: white;
