--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,23 +1,67 @@
 @charset "utf-8";
-.contact-form {
-  padding-top:100px;
+.section-title {
+  text-align: center;
+  font-size:20px;
 }
 
-input, textarea {
-  display: block;
-  width:400px;
-  margin-top:10px;
-  margin-bottom:30px;
-  padding:20px;
-  font-size:18px;
-  border: 1px solid #dee7ec;
+form {
+  width:460px;
+  margin:0 auto;
 }
 
-placeholder {
-  color: #a9a9a9;
+.item{
+  overflow: hidden;
+  margin-bottom: 20px;
 }
 
-.contact-submit {
-  background-color:#dee7ec;
-  color:#889eab;
+.label{
+  float: left;
+  margin-right: 20px;
+  width:135px;
+  border-left: solid 3px #e0505d;
+  padding-left: 10px;
+}
+
+.inputs{
+  float: left;
+  width:300px;
+}
+
+input[type="text"],input[type="email"]{
+  border: solid 1px #aaa;
+  border-radius:5px;
+  padding:10px;
+  font-size: 15px;
+}
+
+textarea{
+  border: solid 1px #aaa;
+  border-radius:5px;
+  padding: 10px;
+  height: 160px;
+  font-size: 15px;
+}
+
+.btn-area{
+  text-align: center;
+}
+
+input[type="submit"]{
+  background: #e0505c;
+  border: none;
+  color: white;
+  font-size:17px;
+  font-weight:bold;
+  padding: 10px 20px;
+  margin: 0 5px;
+}
+
+input[type="reset"]{
+  background: #aaa;
+  border: none;
+  color: white;
+  font-size:17px;
+  font-weight:bold;
+  padding: 10px 20px;
+  margin: 0 5px;
 }
