--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,11 +1,40 @@
 @charset "utf-8";
+ul {
+  padding-inline-start: 0px;
+}
+
+body {
+  width: 98%;
+  margin: auto;
+}
+
+p {
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+}
+
+ul {
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+}
+
+main{
+  height: relative;
+  margin: 10px 10px 100px;
+}
+
+.contact-form {
+  margin: 50px 15% 100px;
+  color: #a9a9a9;
+}
+
 .section-title {
   text-align: center;
   font-size:20px;
 }
 
 form {
-  width:460px;
+  width:75%;
   margin:0 auto;
 }
 
@@ -23,7 +52,7 @@ form {
 }
 
 .inputs{
-  float: left;
+  float: right;
   width:300px;
 }
 
@@ -46,22 +75,37 @@ textarea{
   text-align: center;
 }
 
-input[type="submit"]{
-  background: #e0505c;
-  border: none;
-  color: white;
-  font-size:17px;
-  font-weight:bold;
-  padding: 10px 20px;
-  margin: 0 5px;
+input[type="submit"] {
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
+  padding: 1em 0.5em;
+  text-decoration: none;
+  color: #FFF;
+  background: #ff7f7f;
+  transition: .4s;
 }
 
-input[type="reset"]{
-  background: #aaa;
-  border: none;
-  color: white;
-  font-size:17px;
-  font-weight:bold;
-  padding: 10px 20px;
-  margin: 0 5px;
+input[type="submit"] > span {
+  border-bottom: solid 2px #FFF;
+  border-top: solid 2px #FFF;
+}
+
+input[type="submit"]:hover span {
+  padding: 0.1em 0;
+}
+
+input[type="reset"] {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  color: #67c5ff;
+  border: dashed 1px #67c5ff;
+  border-radius: 3px;
+  transition: .4s;
+}
+
+input[type="reset"]:hover {
+  border-style: dotted;
+  color: #679efd;
 }
