--- a/contact/contact.css
+++ b/contact/contact.css
@@ -69,6 +69,7 @@ textarea{
   padding: 10px;
   height: 160px;
   font-size: 15px;
+  width: 75%;
 }
 
 .btn-area{
@@ -76,33 +77,25 @@ textarea{
 }
 
 input[type="submit"] {
-  position: relative;
-  display: inline-block;
-  font-weight: bold;
-  padding: 1em 0.5em;
-  text-decoration: none;
-  color: #FFF;
-  background: #ff7f7f;
-  transition: .4s;
-}
-
-input[type="submit"] > span {
-  border-bottom: solid 2px #FFF;
-  border-top: solid 2px #FFF;
-}
-
-input[type="submit"]:hover span {
-  padding: 0.1em 0;
+  background: #e0505c;
+  border: none;
+  color: white;
+  font-size:17px;
+  font-weight:bold;
+  padding: 10px 20px;
+  margin: 0 5px;
 }
 
 input[type="reset"] {
-  display: inline-block;
-  padding: 0.5em 1em;
   text-decoration: none;
   color: #67c5ff;
   border: dashed 1px #67c5ff;
   border-radius: 3px;
   transition: .4s;
+  background: #aaa;
+  font-size:17px;
+  padding: 10px 20px;
+  margin: 0 5px;
 }
 
 input[type="reset"]:hover {
