--- a/contact/contact.css
+++ b/contact/contact.css
@@ -29,6 +29,7 @@ main{
 }
 
 .section-title {
+  margin-bottom: 50px;
   text-align: center;
   font-size:20px;
 }
@@ -38,12 +39,12 @@ form {
   margin:0 auto;
 }
 
-.item{
+.item {
   overflow: hidden;
   margin-bottom: 20px;
 }
 
-.label{
+.label {
   float: left;
   margin-right: 20px;
   width:135px;
@@ -51,19 +52,19 @@ form {
   padding-left: 10px;
 }
 
-.inputs{
+.inputs {
   float: right;
   width:300px;
 }
 
-input[type="text"],input[type="email"]{
+input[type="text"],input[type="email"] {
   border: solid 1px #aaa;
   border-radius:5px;
   padding:10px;
   font-size: 15px;
 }
 
-textarea{
+textarea {
   border: solid 1px #aaa;
   border-radius:5px;
   padding: 10px;
@@ -72,7 +73,7 @@ textarea{
   width: 75%;
 }
 
-.btn-area{
+.btn-area {
   text-align: center;
 }
 
@@ -92,7 +93,7 @@ input[type="reset"] {
   border: dashed 1px #67c5ff;
   border-radius: 3px;
   transition: .4s;
-  background: #aaa;
+  background: #fff;
   font-size:17px;
   padding: 10px 20px;
   margin: 0 5px;
