--- a/contact/contact.css
+++ b/contact/contact.css
@@ -49,12 +49,12 @@ form {
   margin-right: 20px;
   width:135px;
   border-left: solid 3px #e0505d;
-  padding-left: 10px;
+  padding: 10px;
 }
 
 .inputs {
   float: right;
-  width:300px;
+  width: 65%;
 }
 
 input[type="text"],input[type="email"] {
