--- a/landing.css
+++ b/landing.css
@@ -31,7 +31,8 @@ main{
 
 main img {
   width: 70%;
-  display: block;
+  display: inline;
+  text-align: center;
   margin: auto;
   margin-top: 30px;
   margin-bottom: 30px;
