--- a/contact/contact.css
+++ b/contact/contact.css
@@ -47,7 +47,7 @@ form {
 label {
   float: left;
   margin-right: 20px;
-  width:135px;
+  width: 30%;
   border-left: solid 3px #e0505d;
   padding: 10px;
 }
@@ -68,9 +68,10 @@ textarea {
   border: solid 1px #aaa;
   border-radius:5px;
   padding: 10px;
+  float: left;
   height: 160px;
   font-size: 15px;
-  width: 75%;
+  width: 65%;
 }
 
 .btn-area {
