--- a/landing.css
+++ b/landing.css
@@ -31,11 +31,9 @@ main{
 
 main img {
   width: 70%;
-  display: inline;
+  display: block;
   text-align: center;
-  margin: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px 15%;
 }
 
 .main-border{
