--- a/contact/contact.css
+++ b/contact/contact.css
@@ -68,7 +68,7 @@ textarea {
   border: solid 1px #aaa;
   border-radius:5px;
   padding: 10px;
-  float: left;
+  float: right;
   height: 160px;
   font-size: 15px;
   width: 65%;
