--- a/contact/contact.css
+++ b/contact/contact.css
@@ -46,7 +46,6 @@ form {
 
 label {
   float: left;
-  margin-right: 20px;
   width: 30%;
   border-left: solid 3px #e0505d;
   padding: 10px;
@@ -80,12 +79,16 @@ textarea {
 
 input[type="submit"] {
   background: #e0505c;
+  border: solid 1px #f13b47;
+  position: relative;
   border: none;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
+  text-shadow: 0 1px 0 rgba(0,0,0,0.2);
   color: white;
   font-size:17px;
-  font-weight:bold;
   padding: 10px 20px;
-  margin: 0 5px;
+  margin: 0 10px;
 }
 
 input[type="reset"] {
@@ -97,7 +100,7 @@ input[type="reset"] {
   background: #fff;
   font-size:17px;
   padding: 10px 20px;
-  margin: 0 5px;
+  margin: 0 10px;
 }
 
 input[type="reset"]:hover {
