--- a/base.css
+++ b/base.css
@@ -66,6 +66,16 @@ header {
   background-color: #26dad4
 }
 /*インスタ*/
+.instagram {
+  display: inline-block;
+  text-align: center;
+  margin-left: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: #a9a9a9;
+  font-size: 18px;
+}
+
 .sns {
   text-align: center;
   margin-top: 50px;
