--- a/base.css
+++ b/base.css
@@ -67,7 +67,7 @@ header {
 }
 /*インスタ*/
 .instagram {
-  display: inline-block;
+  display: block;
   text-align: center;
   margin-left: auto;
   margin-top: 30px;
