--- a/base.css
+++ b/base.css
@@ -14,8 +14,8 @@ body {
 }
 
 p {
-  margin-block-start: 0.5em;
-  margin-block-end: 0.5em;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 ul {
