--- a/contact/contact.css
+++ b/contact/contact.css
@@ -9,8 +9,8 @@ body {
 }
 
 p {
-  margin-block-start: 0.5em;
-  margin-block-end: 0.5em;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 ul {
@@ -44,7 +44,7 @@ form {
   margin-bottom: 20px;
 }
 
-label {
+.label {
   float: left;
   width: 30%;
   border-left: solid 3px #e0505d;
@@ -55,8 +55,11 @@ label {
   float: right;
   width: 65%;
 }
+.radio {
+  padding: 10px 0;
+}
 
-input[type="text"],input[type="email"] {
+input[type="text"],input[type="email"], select {
   border: solid 1px #aaa;
   border-radius:5px;
   padding:10px;
@@ -74,6 +77,7 @@ textarea {
 }
 
 .btn-area {
+  margin-top: 50px;
   text-align: center;
 }
 
