--- a/base.css
+++ b/base.css
@@ -70,7 +70,7 @@ header {
   margin-left: auto;
   margin-top: 30px;
   margin-bottom: 30px;
-  color: #a9a9a9;
+  color: #555555;
   font-size: 18px;
 }
 
