--- a/landing.css
+++ b/landing.css
@@ -45,7 +45,28 @@ main ul{
   margin: auto;
   text-align: center;
   width: 100%;
-}
+  /*chrome*/
+  @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: .001dpcm) main ul {
+      margin: auto;
+      text-align: center;
+    }
+  /*ie*/
+  _:-ms-lang(x)::-ms-backdrop, main ul {
+    margin: auto;
+    margin-left: -20px;
+    margin-right: 20px;
+    text-align: center;
+    width: 100%;
+  }
+  /*edge*/
+  @supports (-ms-ime-align: auto) main ul {
+      margin: auto;
+      margin-left: -20px;
+      margin-right: 20px;
+      text-align: center;
+      width: 100%;
+    }
+  }
 
 h1 {
   color: white;
