--- a/responsive_base.css
+++ b/responsive_base.css
@@ -12,8 +12,8 @@
   .header-list {
     background-color: white;
     color: #00ECFF;
-    margin-top: auto;
-    margin-bottom: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
     text-align: center;
     width: 100%;
   }
@@ -31,7 +31,8 @@
   _:-ms-lang(x)::-ms-backdrop, .header-list ul {
     display: block;
     float: left;
-    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
     margin-left: -20px;
     margin-right: 20px;
     text-align: center;
@@ -42,7 +43,8 @@
     .header-list ul {
       display: block;
       float: left;
-      margin: auto;
+      margin-top: 5px;
+      margin-bottom: 5px;
       margin-left: -20px;
       margin-right: 20px;
       text-align: center;
