--- a/landing.css
+++ b/landing.css
@@ -12,7 +12,7 @@ main img {
   width: 70%;
   display: block;
   text-align: center;
-  margin: auto 15%;
+  margin: 30px 15% 50px;
 }
 
 .main-border{
