--- a/responsive_base.css
+++ b/responsive_base.css
@@ -12,8 +12,6 @@
   .header-list {
     background-color: white;
     color: #00ECFF;
-    margin-top: 5px;
-    margin-bottom: 5px;
     text-align: center;
     width: 100%;
   }
@@ -52,7 +50,7 @@
     }
   }
   .header-list a {
-    margin: auto;
+    margin: 5px auto;
     text-align: center;
     color: #00ECFF;
     width: 33.3%;
