--- a/responsive_landing.css
+++ b/responsive_landing.css
@@ -5,6 +5,7 @@
     width: 100%;
   }
 }
+
 /*ie*/
 _:-ms-lang(x)::-ms-backdrop, main ul {
   margin: auto 20px auto -20px;
@@ -13,6 +14,10 @@ _:-ms-lang(x)::-ms-backdrop, main ul {
   text-align: center;
   width: 100%;
 }
+_:-ms-lang(x)::-ms-backdrop, main {
+  margin: auto;
+}
+
 /*edge*/
 @supports (-ms-ime-align: auto) {
   main ul {
@@ -27,7 +32,8 @@ _:-ms-lang(x)::-ms-backdrop, main ul {
 /*タブレット向け*/
 @media (max-width: 1000px) {
   main img {
-    margin: 80px auto 100px;
+    margin: auto;
+    padding: 15px 0 30px;
   }
 }
 
@@ -35,7 +41,8 @@ _:-ms-lang(x)::-ms-backdrop, main ul {
 @media (max-width: 670px){
   main img {
     width: 98%;
-    margin: 10px auto 10px;
+    margin: auto;
+    padding: 0 0 15px;
   }
   .button{
     float: none;
